# SirusPatcher

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
DBC/: CMakeLists.txt  dbcchanger.cc  dbcchanger.h  dbccreator.cc  dbccreator.h  dbchandler.cc  dbchandler.h  record.cc  record.h
DBC/inc/: dbc.h  record.h
DBC/src/: CMakeLists.txt  dbc.cc  record.cc
DBCLib/inc/: dbc.h  record.h
DBCLib/src/: CMakeLists.txt  dbc.cc  record.cc
QtGui/: CMakeLists.txt  abstractdbctable.h  createpatchworker.cc  createpatchworker.h  enchanttableworker.cc  enchanttableworker.h  jsontablehandler.cc  jsontablehandler.h  ladyspiritschanger.cc  ladyspiritschanger.h  main.cc  main.cpp  mpqarchiver.cc  mpqarchiver.h  mpqworker.cc  mpqworker.h  proginfogetter.cc  proginfogetter.h  resources.qrc  siruspatcherwindow.cc  siruspatcherwindow.h  siruspatcherwindow.ui  spelldbctable.cc  spelldbctable.h  spelltableworker.cc  spelltableworker.h  splashloadingscreen.cc  splashloadingscreen.h  windowheaderwidget.cc  windowheaderwidget.h  yserachanger.cc  yserachanger.h
QtGui/resources/dbc/: Spell.dbc.json  SpellItemEnchantment.dbc.json
QtGui/resources/text/: version
Test/: CMakeLists.txt  main.cc
Test/src/: CMakeLists.txt  main.cc
